--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
         <div class="row py-5">
             <div class="text-center">
                         <h4 class="pt-5 pb-3">Comenzá a prepararlo <span class="text-success">YA</span> !</h4>
-                        <a routerLink="/crearPedido" class="btn btn-success rounded-pill px-5">CREAR PEDIDO</a>
+                        <a routerLink="/crearpedido" class="btn btn-success rounded-pill px-5">CREAR PEDIDO</a>
             </div>
         </div>
     </div>
