--- a/Frontend/src/app/components/ver-carrito/ver-carrito.component.html
+++ b/Frontend/src/app/components/ver-carrito/ver-carrito.component.html
@@ -1,30 +1,34 @@
-<section>
-    <div class="container">
-        <div class="row mb-5">
-            <h2 class="mt-5 mb-3"><i class="bi bi-bag-heart text-primary mx-2"></i> Mis productos:</h2>
-            <div class="col-4 g-5 h-100">
-                <div class="card h-100" >
-                    <img src="./assets/img/carritox.png" class="card-img-top" alt="banner compra">
-                    <div class="card-body">
-                        <div *ngFor="let item of listaCarrito">
-                            <p class="card-text fw-bold">Producto: <span class="fw-normal">{{item.nombre}}</span></p>
-                            <p class="card-text fw-bold">Descripción: <span class="fw-normal">{{item.descripcion}}</span></p>
-                            <p class="card-text">Precio: <span class="fw-bold ps-5">{{item.precio}}</span></p>
-                            <button (click)="eliminarDelCarro(item)" class="btn btn-danger">Eliminar del carrito</button>
-                            <hr class="my-3"/>
-                        </div>
-                    </div>
-                    <p>Monto Total: <span class="ps-5">{{this.obtenerTotal()}}</span></p>
-                </div>
-            
-                <div class="py-5 text-end">
-                    <div class="pb-5 pt-3 d-flex justify-content-between">
-                        <button class="btn btn-danger px-5" (click)="this.vaciarCarro()">Vaciar Carro</button>
-                        <a routerLink="/home" class="btn btn-primary ms-4 px-5" type="button">Seguir comprando</a>
-                        <a routerLink="/confirmar" class="btn btn-success px-5 ms-4" type="button">Pagar</a>
-                    </div>
+<div class="container py-5">
+
+    <div *ngFor="let prod of listaCarrito" class="card text-bg-dark mb-3" style="width: 100%">
+        <div class="row g-0">
+            <div class="col-md-3">
+                <img class="img-fluid" src="http://localhost:3000/static/{{ prod.imagen }}" alt="Product image">
+            </div>
+            <div class="col-md-9">
+                <div class="card-body">
+                    <h5 class="card-title">{{ prod.nombre }}</h5>
+                    <p class="card-text">{{ prod.descripcion }}</p>
+                    <p class="card-text"><b>Precio:</b> ${{ prod.precio }}</p>
+                    <hr class="my-3" />
+                    <button [disabled]="this.obtenerCantidadElementos() === 1" class="btn btn-danger"
+                        (click)="this.eliminarDelCarrito(prod)"><i class="bi bi-trash"></i></button>
                 </div>
             </div>
         </div>
     </div>
-</section>
+
+    <div class="text-end">
+        <h5 class="my-3">Monto Total: <span class="ps-5">${{this.obtenerMonto()}}</span></h5>
+        <div class="d-flex flex-row gap-2">
+            <button class="btn btn-danger px-5" (click)="this.varciarCarrito()">Vaciar carrito</button>
+            <a routerLink="/crearPedido" class="btn btn-primary">Seguir comprando</a>
+            <div *ngIf="!this.obtenerEstadoDeBoton() ;else anchorPagar">
+                <button (click)="generarOrdenPago()" class="btn btn-success px-5 my-6">Confirmar Compra</button>    
+            </div>
+            <ng-template #anchorPagar>
+                <a [class.disabled]="this.desabilitarBoton ? null: true" [href]="this.init_point" class="btn btn-success px-5 my-6">Pagar</a>
+            </ng-template>
+        </div>
+    </div>
+</div>
