--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -15,14 +15,15 @@
                         <li><a class="dropdown-item text-dark py-2" routerLink="/registrar">Registrar</a></li>
                     </div>
                     <ng-template #loggedBlock>
+                        <li *ngIf="this.isAdmin()"><a class="dropdown-item text-dark py-2" routerLink="/agregarsandwich">Agregar Producto</a></li>
                         <li><a class="dropdown-item text-dark py-2" routerLink="/misdatos">Mis datos</a></li>
-                        <li><a class="dropdown-item text-dark py-2" routerLink="/historial">Historial</a></li>
+                        <hr>
                         <li><a class="dropdown-item text-dark py-2" routerLink="/home" (click)="this.salir()">Salir</a></li>
                     </ng-template>
                 </ul>
             </span>
             
-                <a *ngIf="this.isLogged()" routerLink="/carrito" style="position: relative;">
+                <a *ngIf="this.isLogged() && this.obtenerCantidadProductos() >= 1" routerLink="/carrito" style="position: relative;">
                     <span *ngIf="this.obtenerCantidadProductos() > 0" 
                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger roundedCarrito">
                            <span class="visually-hidden">New alerts</span>
