--- a/Frontend/src/app/components/registro/registro.component.html
+++ b/Frontend/src/app/components/registro/registro.component.html
@@ -1,7 +1,7 @@
 <div class = "container">
     <div id="loginbox">
         <div class="row justify-content-center">
-            <div class="col-6 mt-5" style="background-color: #f7f7f7; padding: 46px;">
+            <div class="col-6 mt-5" style="background-color: #f7f7f7; padding: 30px;">
                 <form [formGroup]="form" (ngSubmit)="registrarUsuario()">
                     <h3>Bienvenido! ingresá tus datos</h3>
                     <hr class="mb-4">
@@ -61,11 +61,12 @@
                         </span>
                         <input formControlName="rePass" type="password" class="form-control" placeholder="Ingrese password nuevamente"/>
                     </div>
-                    <div class="d-grid">
-                        <button [disabled]="this.form.invalid" class="btn btn-success mt-3 mb-4" type="Submit">Registrar</button>
+                    <div class="d-flex flex-row gap-2 justify-content-center my-2">
+                        <button [disabled]="this.form.invalid" class="btn btn-success" type="Submit">Registrar</button>
                         <a routerLink="/home" class="btn btn-primary">Home</a>
                     </div>
                 </form>
+            </div>
         </div>
     </div>
 </div>
