--- a/Frontend/src/app/components/seleccion-sandwitch/seleccion-sandwitch.component.html
+++ b/Frontend/src/app/components/seleccion-sandwitch/seleccion-sandwitch.component.html
@@ -6,20 +6,23 @@
 <section>
     <div class="container py-5">
         <div class="row g-4">
-            <h3 class="mb-2">Genere su pedido</h3>
-            <h4 class="my-1">Filtrar por preferencia:</h4>
-            <form [formGroup]="form" (ngSubmit)="actualizarPreferencia()" method="POST" class="d-flex m-0">
-                <select formControlName="preferencia" class="form-select w-auto">
-                    <option *ngFor="let pref of Preferencias" [ngValue]="pref">{{pref}}</option>
-                </select>
-                <button class="btn btn-primary ms-2" Type="Submit">Filtrar</button>
-            </form>
-            <app-sandwitch class="col-md-6" *ngFor="let prod of listaSandwitches" [prod]="prod"></app-sandwitch>
+            <h3 class="text-center mb-2">Genere su pedido</h3>
+            <div class="d-flex flow-row gap-2">
+                <h4 class="my-1">Filtrar por preferencia:</h4>
+                <form [formGroup]="form" (ngSubmit)="actualizarPreferencia()" method="POST" class="d-flex m-0">
+                    <select formControlName="preferencia" class="form-select w-auto">
+                        <option *ngFor="let pref of Preferencias" [ngValue]="pref">{{pref}}</option>
+                    </select>
+                    <button class="btn btn-primary ms-2" Type="Submit">Filtrar</button>
+                </form>
+            </div>
+            <app-sandwitch class="col-md-3" *ngFor="let prod of listaSandwitches" [prod]="prod"></app-sandwitch>
         </div>
-        <a routerLink="/home" class="btn btn-primary px-5 my-5">Volver al Home</a>
-        <a routerLink="/confirmar" class="btn btn-success px-5 my-5"> Ver Pedido
-                <span class="badge bg-secondary ms-2">{{this.obtenerLongitudCarrito()}}</span>
-        </a>
-        
+        <div class="d-flex flex-row justify-content-end gap-2 my-2">
+            <a routerLink="/home" class="btn btn-primary px-6">Volver al Home</a>
+            <a routerLink="/confirmar" class="btn btn-success px-6"> Ver Pedido
+                    <span class="badge bg-secondary ms-2">{{this.obtenerLongitudCarrito()}}</span>
+            </a>
+        </div>
     </div>
 </section>
